--- a/src/sass/partials/_variables.scss
+++ b/src/sass/partials/_variables.scss
@@ -1,6 +1,9 @@
 //page
+$page-width:500px;
+$page-height:500px;
+$page-color:#fff;
 $font-family: 'omnesmedium';
-$text-colour: $banner-white;
+$text-colour: #000;
 //bootstrap
 $bootstrap-sass-asset-helper: false !default;
 //
