--- a/src/pug/includes/body.pug
+++ b/src/pug/includes/body.pug
@@ -1,3 +1,4 @@
 body
-    .container
-        h1 htmlWebpackPlugin.options.title
+    .page
+        header
+            h1= htmlWebpackPlugin.options.title
