--- a/src/sass/partials/_placeholders.scss
+++ b/src/sass/partials/_placeholders.scss
@@ -15,9 +15,9 @@
     display: block;
 }
 
-%banner-dimensions {
-    height: $banner-height;
-    width: $banner-width;
+%page-dimensions {
+    height: $page-height;
+    width: $page-width;
 }
 
 %margin0 {
@@ -64,6 +64,6 @@
 
 // backgrounds
 %plain-background {
-    @extend %banner-dimensions;
-    background-color: $banner-color;
+    @extend %page-dimensions;
+    background-color: $page-color;
 }
