--- a/src/pug/includes/body.pug
+++ b/src/pug/includes/body.pug
@@ -1,4 +1,7 @@
 body
     .page
-        header
-            h1= htmlWebpackPlugin.options.title
+        div.page-header
+            header
+                h1= htmlWebpackPlugin.options.title
+                h2 by #{htmlWebpackPlugin.options.author}
+        div.page-content
