zoom, pan and click
need to find a better solution for adding recursion

Signed-off-by: Joel Woods <joel@miaem.com>

--- a/src/pug/includes/body.pug
+++ b/src/pug/includes/body.pug
@@ -2,6 +2,7 @@ body
     .page
         div.page-header
             header
-                h1= htmlWebpackPlugin.options.title
+                //- h1= htmlWebpackPlugin.options.title
+                h1 Sierpinski &#9650; explorer
                 h2 by #{htmlWebpackPlugin.options.author}
         div.page-content
