--- a/src/sass/partials/_page.scss
+++ b/src/sass/partials/_page.scss
@@ -8,6 +8,9 @@
         padding-bottom: 0;
         padding-top: 0;
         margin: 0;
+        & h1, h2 {
+            margin: 10px 0 10px 0;
+        }
     }
     &-content {
         @extend .container-fluid;
